--- a/TicketTracker/TicketTracker.Web/Features/Home/Index.cshtml
+++ b/TicketTracker/TicketTracker.Web/Features/Home/Index.cshtml
@@ -29,3 +29,8 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/dist/vendor.bundle.js"></script>
+    <script src="~/dist/Home.bundle.js"></script>
+}
