--- a/TicketTracker/TicketTracker.Web/Features/Shared/_Layout.cshtml
+++ b/TicketTracker/TicketTracker.Web/Features/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Help Desk</title>
-    @Styles.Render("~/Content/css")
+    @*@Styles.Render("~/Content/css")*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
